kubernetes/cluster/active/apps/bentopdf/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: PDF Toolkit.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: bentopdf.svg
    gethomepage.dev/name: BentoPDF
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=bentopdf"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "pdf.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bentopdf
          namespace: pdf
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      # https://github.com/alam00000/bentopdf/blob/main/docs/self-hosting/kubernetes.md#if-youre-using-gateway-api-and-want-to-force-add-headers
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Cross-Origin-Opener-Policy
                value: same-origin
              - name: Cross-Origin-Embedder-Policy
                value: require-corp
